# axum_scaffold

./: .gitignore  Cargo.toml  Dockerfile.debian  README.md
src/: lib.rs  main.rs
src/db/: connection.rs
src/errors/: app_error.rs  mod.rs
src/handlers/: home_handler.rs
src/middleware/: auth_middleware.rs
src/models/: user.rs
src/routes/: home.rs  mod.rs  user.rs
src/services/: user_service.rs
src/templates/: base_template.rs  mod.rs
src/utils/: config.rs
tests/: integration_tests.rs  unit_tests.rs
