[package]
name = "axum_scaffold"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
tokio = { version = "1.29", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.4", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
http = "1.2.0"
home = "0.5.11"
sqlx = { version = "0.8.2", features = [ "runtime-tokio-native-tls", "postgres" ] }

config = "0.13"  # 请使用最新版本或您需要的特定版本
thiserror = "1.0"